# Cheapy

./: .gitignore  AGENTS.md  Cheapy_PROJECT_STARTER_PROMPT.md  README.md  README.vi.md  README.zh-CN.md  cheapy verdict report.md  pyproject.toml
.cheapy/: claude-instructions.md
cheapy/: __init__.py  __main__.py  agent_hooks.py  airports.py  cli.py  client_configs.py  markdown_report.py  mcp.py  mcp_installer.py  public_links.py  public_url_safety.py  search.py  search_planner.py  search_service.py  watchlist.py
cheapy/browser_bootstrap/: __init__.py  cloak.py  cookies.py  errors.py  types.py
cheapy/data/: README.md  airports.v1.json  hubs.v1.json
cheapy/models/: __init__.py  contracts.py
cheapy/providers/: __init__.py  base.py  registry.py
cheapy/storage/: __init__.py  sqlite.py
scripts/: benchmark_traveloka_live_matrix.py  skyscanner_http_probe.py
tests/: test_agent_hooks.py  test_airport_data.py  test_airports.py  test_cheapy_skill.py  test_cli.py  test_client_configs.py  test_contracts.py  test_google_fli_normalizer.py  test_google_fli_provider.py  test_live_google_fli.py  test_live_skyscanner.py  test_live_traveloka.py  test_markdown_report.py  test_mcp.py  test_mcp_installer.py  test_package_data.py  test_providers.py  test_public_links.py  test_schema_export.py  test_search.py  test_search_planner.py  test_search_service.py  test_traveloka_adapter.py  test_traveloka_normalizer.py  test_traveloka_provider.py  test_watchlist.py
tests/browser_bootstrap/: __init__.py  fakes.py  test_cloak.py  test_cookies.py
tests/skyscanner/: __init__.py  test_adapter.py  test_browserless.py  test_client.py  test_errors.py  test_http_probe.py  test_normalizer.py  test_provider.py  test_scan_graphql_bundles.py  test_search.py  test_session.py
tests/storage/: __init__.py  test_sqlite.py
tests/traveloka/: fakes.py  normalization_fixtures.py  test_activation.py  test_adapter.py  test_browser_helpers.py  test_capture.py  test_errors.py  test_inventory.py  test_live_matrix_script.py  test_normalization_legs.py  (+16 more)
(+96 files in other folders)
