[project]
name = "cheapy-flights"
version = "0.1.0"
description = "Agent-first MCP server and Python package for cheap flight search."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
cheapy = "cheapy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cheapy"]

[tool.pytest.ini_options]
markers = [
    "contract: Contract V1 schema and validation tests",
    "integration: Local integration tests without live provider calls",
    "packaging: Wheel and package-data behavior tests",
    "protocol: MCP stdio protocol-cleanliness tests",
    "security: Redaction and secret-handling tests",
    "live: Opt-in live provider tests",
]
addopts = "--strict-markers"
testpaths = ["tests"]
